# DeepFocus

./: .gitignore  README.md  commit_msg.txt  generate-icons.js  package-lock.json  package.json  start.bat
.github/workflows/: build.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/deepfocus/app/: BootReceiver.java  MainActivity.java  StudyTimerService.java
android/app/src/main/res/values/: styles.xml
src/: index.html  main.js  manifest.json  preload.js  renderer.js  styles.css  sw.js  window-controls.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  win_power.rs
src/icons/: generate-icons.html
