[package]
name = "deepfocus"
version = "2.0.0"
description = "Lightweight always-on study timer"
authors = ["DeepFocus"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
