[package]
name = "deepfocus"
version = "2.3.3"
description = "Lightweight always-on study timer"
authors = ["DeepFocus"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
